--- a/Template LaTeX/TeXFiles/EnvironnementDeTravail.tex
+++ b/Template LaTeX/TeXFiles/EnvironnementDeTravail.tex
@@ -66,28 +66,29 @@ Visual Paradigm  en ligne est un outil de création de diagrammes en ligne. Vous
 \newpage
 \subsection{Diagramme d’activité}
 \subsubsection{Création de compte}
-Le diagramme d’activité qu’illustre la figure 4.2 décrit le cas d’utilisation « Créer un compte ».
+Le diagramme d’activité qu’illustre la figure~\ref{activiteCompte} décrit le cas d’utilisation « Créer un compte ».
 \begin{figure}[h!]
 	\includegraphics[width=18cm, height=19cm]{./Template LaTeX/Images/ins_act.png}
 \caption{Diagramme d’activité : Création de compte}
-\label{fig3:activite}
+\label{activiteCompte}
+
 \end{figure}
 \newpage
 \subsubsection{Transfert d'argent}
-Le diagramme d’activité qu’illustre la figure 4.3 décrit les différentes actions ou enchainements
+Le diagramme d’activité qu’illustre la figure~\ref{activiteTr} décrit les différentes actions ou enchainements
 effectués lors d’une opération de transfert d’argent.
 \begin{figure}[h!]
 	\includegraphics[width=18cm, height=20cm]{./Template LaTeX/Images/trans_act.png}
 	\caption{Diagramme d'activité : Transfert d'argent}
-	\label{fig3:activite}
+	\label{activiteTr}
 \end{figure}
 \newpage
 \subsubsection{Authentification}
-Le diagramme d’activité qu’illustre la figure 4.4 décrit le cas d’utilisation « Authentification ».
+Le diagramme d’activité qu’illustre la figure~\ref{activiteAuth} décrit le cas d’utilisation « Authentification ».
 \begin{figure}[h!]
 	\includegraphics[width=18cm, height=20cm]{./Template LaTeX/Images/auth_act.png}
 	\caption{Diagramme d'activité : Authentification}
-	\label{fig3:activite}
+	\label{activiteAuth}
 \end{figure}
 
 
@@ -98,7 +99,7 @@ Le diagramme d’activité qu’illustre la figure 4.4 décrit le cas d’utilis
 \begin{figure}[h!]
 	\includegraphics[width=18cm, height=20cm]{./Template LaTeX/Images/Diagramme_de_classe.png}
 	\caption{Diagramme d'activité : Transfert d'argent}
-	\label{fig3:class}
+	\label{fig4:class}
 \end{figure}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%5 ICI %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%555
