--- a/Template LaTeX/TeXFiles/PresentationDeLaSociete.tex
+++ b/Template LaTeX/TeXFiles/PresentationDeLaSociete.tex
@@ -32,6 +32,12 @@ CADORIM offre une large palette de prestations organisées autour des activités
 	
 \end{enumerate}
 \subsection{Organigramme}
+La structure organisationnelle de CADORIM comprend :
+\begin{figure}[h]
+	\includegraphics[scale=0.8,width=400px]{./Template LaTeX/Images/og.png}
+	\centering
+	\caption{Organigramme du CADORIM}
+\end{figure}
 \begin{comment}
 	content...
 
@@ -52,8 +58,11 @@ données provenant de la conception.
 \item Déploiement : externalisation des ressources.
 \end{enumerate}
 \end{comment}
+\newpage
 \section{Description du projet}
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%% New add from Introduction %%%%%%%%%%%%%%%%%%%%%
+\begin{comment}
+	content...
 
 Savoir qui est votre client et adopter des protocoles pour prévenir la criminalité financière sont des défis permanents pour les institutions financières. De manière significative, les institutions financières (y compris les banques, les coopératives de crédit et les sociétés financières du Fortune 50) doivent se conformer à un ensemble des réglementations de plus en plus complexes pour la vérification de l'identité des clients appelée KYC.
 
@@ -71,7 +80,7 @@ KYC est un moyen de rendre la vérification de l'identité des clients plus pré
 KYC doivent être effectuées lors de l'intégration d'un nouveau client, mais il est préférable de répéter ces vérifications de temps en temps, pour s'assurer que tout est comme il se doit. En surveillant les comptes clients de cette manière, les comportements suspects peuvent être signalés plus rapidement.
 
 Un système CRM fournit des flux de travail automatisés qui permettent à votre équipe marketing de consacrer plus de temps à des tâches stratégiques, telles que la création de campagnes marketing qui résonnent, l'analyse des données de ces campagnes et le test de différentes approches basées sur ces analyses. Les agents du service client peuvent passer leur temps à travailler avec des clients qui ont des questions, des problèmes ou des besoins plus complexes. En bref, avec des processus de service client plus efficaces, les entreprises peuvent établir de meilleures relations avec leurs clients.
-
+\end{comment}
 \subsection{Problématiques}	
 
 En réalité, la réalisation d'une application,qui applique le principe de KYC et integre un  système CRM,
