--- a/Template LaTeX/TeXFiles/newIntro.tex
+++ b/Template LaTeX/TeXFiles/newIntro.tex
@@ -4,12 +4,36 @@
 Actuellement, à travers les progrès de la technologie, le smartphone est devenu un outil
 indispensable de travail qui peut apporter un plus dans la vie professionnelle et sociale de tout
 un chacun. D’ailleurs cela s’illustre parfaitement dans le domaine du Mobile Money qui est
-l’une des plus grandes évolutions dans le secteur consacré aux échanges de capitaux notamment
-en Afrique où une grande partie de la population n'a pas de compte bancaire.
-Néanmoins, il existe encore beaucoup de progrès et d’innovation à effectuer dans ce secteur.
-En effet, nous faisons face à un problème accru de manque de petites monnaies dans nos
-échanges et transactions quotidiens entrainant des tensions entre acteurs et un ralentissement
-des activités économiques particulièrement du secteur informel. Malgré l’évolution des outils
-de transfert d’argent, cette question de petites monnaies fréquemment utilisées pour faciliter
-nos petits achats reste encore un problème non résolu qui mérite une étude approfondie dans le
-but d’en proposer une solution.
+l’une des plus grandes évolutions dans le secteur consacré aux transfert d'argent 
+de l’europe vers l'afrique où une grande partie de la population de 
+l'afrique  n'a pas de compte bancaire.\newline
+Au fur et à mesure on entend désormais partout, le processus KYC (Know Your Customer) se déploie dans de nombreux secteurs d’activité. Véritable atout pour combattre la fraude et l’usurpation d’identité, un processus KYC, lorsqu’il est correctement déployé, offre aujourd’hui une multitude d’avantages aux utilisateurs comme aux entreprises.\newline
+Dans notre société, l’information est devenue un élément à la fois stratégique pour développer les
+activités, et essentiel pour assurer un avantage concurrentiel (optimisation des coûts, meilleure
+satisfaction client…) aux entités qui savent l’utiliser. C’est ce constat qui explique pourquoi les
+entreprises cherchent aujourd’hui à mettre en place des systèmes de collecte et de traitement de
+données toujours plus performants.
+De même, la satisfaction du client est plus que jamais au centre des préoccupations des entreprises et
+se concrétise par une gestion personnalisée de la relation client : comprendre les clients et leurs
+attentes, les fdéliser, les inciter à consommer davantage. Le CRM, Customer Relationship
+Management (GRC en français) a pour objet d'identifer, attirer et conserver les meilleurs clients et
+d'en retirer chiffre d'affaire et rentabilité.
+Ainsi le CRM englobe l'ensemble des activités et des processus que doit mettre en place une entreprise
+pour interagir avec ses clients et ses prospects afn de leur fournir des produits et des services adéquats
+au bon moment. Les entreprises ont de plus en plus recours à une approche de type de CRM, afn de se 
+différencier. En effet, la banalisation de l'offre, une exigence accrue du client conduisent les
+entreprises à faire évoluer leur offre dans le sens d'une plus grande personnalisation. Afn de parvenir
+à cet objectif, l'entreprise est tenue de s'adapter à la profusion des canaux d'accès parallèles et en
+particulier Internet.
+L'arrivée des Nouvelles Technologies de l'Information et de la Communication a en effet un impact
+très important sur les attitudes et les stratégies des entreprises face au CRM. Si bien que l'on peut se
+demander si l'E-CRM, la gestion de la relation client par Internet constitue une véritable révolution
+pour le CRM.
+
+
+
+
+
+\begin{comment}
+On l’entend désormais partout, le processus KYC (Know Your Customer) se déploie dans de nombreux secteurs d’activité. Véritable atout pour combattre la fraude et l’usurpation d’identité, un processus KYC, lorsqu’il est correctement déployé, offre aujourd’hui une multitude d’avantages aux utilisateurs comme aux entreprises. Mais quelles fonctions et quels usages se cachent derrière cet acronyme ? Comment a-t-il vu le jour et comment évolue-t-il face à la digitalisation des entreprises ? Découvrez, à travers ce guide, les atouts qu’un processus KYC automatisé peut apporter, ainsi que les différentes étapes qui en font une réussite.
+\end{comment}
