--- a/document.tex
+++ b/document.tex
@@ -164,7 +164,7 @@
 	Processus Unifié (UP) comme méthode de modélisation et UML (Unified Modelling Language)
 	comme langage de modélisation.	
 		\end{comment}
-		Le but de ce travail est la reimagination de l'application CADORIM pour être à jour à l'évolution  technologie dans le monde. La start-up Cadorim qui exerce dans le domaine du transfert d’argent de l’Europe vers la Mauritanie a proposé de créer un system d'obtention  des informations de client  pour  la bonne connaissance au client (KYC) et de créer un system de gestion de relation client (CRM).Ce qui nécessite la reconstruction de l'application CADORIM, d'une part pour faciliter mon adaptation d'un l'environnement de travail  dans la société et d'autre part assure la bonne intégration de nouveaux changements.
+		Le but de ce travail est la reimagination de l'application CADORIM pour être à jour à l'évolution  technologie dans le monde. La start-up Cadorim qui exerce dans le domaine du transfert d’argent de l’Europe vers la Mauritanie a proposé de créer un system d'obtention  des informations de client  pour  la bonne connaissance au client (KYC) et de créer un system de gestion de relation client (CRM). Ce qui nécessite la reconstruction de l'application CADORIM, Pour faciliter l'adaptation dans l'environnement de travail  dans la société et  assurer la bonne intégration de nouveaux changements.
 		\\La nouvelle version de l'application permettra la validation automatique des comptes clients d'une manière automatique.
 	
 	\thispagestyle{empty}
@@ -202,11 +202,15 @@
 	\tableofcontents
 	\listoffigures
 	\thispagestyle{empty}
-	\input{./Template LaTeX/TeXFiles/Introduction}
+	\input{./Template LaTeX/TeXFiles/newIntro}
+	%\input{./Template LaTeX/TeXFiles/Introduction}
 	\input{./Template LaTeX/TeXFiles/PresentationDeLaSociete}
-	\input{./Template LaTeX/TeXFiles/Analyse}
+	%\input{./Template LaTeX/TeXFiles/Analyse}
 	\input{./Template LaTeX/TeXFiles/EnvironnementDeTravail}
-	\input{./Template LaTeX/TeXFiles/Realisation}
-	\input{./Template LaTeX/TeXFiles/Interface}
-	
+	\input{./Template LaTeX/TeXFiles/new_realisation}
+	\input{./Template LaTeX/TeXFiles/new_Conclusion}
+	\input{./Template LaTeX/TeXFiles/perspectives}
+	\input{./Template LaTeX/TeXFiles/Bibliographie}
+	%\input{./Template LaTeX/TeXFiles/Realisation}
+	%\input{./Template LaTeX/TeXFiles/Interface}	
 \end{document}
